--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello Flask</title>
+    <title>Cooking Fever</title>
 </head>
 <body>
-
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -16,6 +15,7 @@
     </nav>
 
     <h1>Recipes Page</h1>
+
 
 </body>
 </html>
