--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for ('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>Cooking Fever</title>
 </head>
 <body>
@@ -12,16 +12,15 @@
   <!-- Responsive navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container px-5">
-          <a class="navbar-brand" href="#!">Start Bootstrap</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">Cooking Fever</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ url_for('recipes') }}">Recipes</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ url_for('contact') }}">Contact</a></li>
               </ul>
           </div>
       </div>
@@ -29,62 +28,31 @@
 
   <!-- Page Content-->
   <div class="container px-4 px-lg-5">
+         <!-- Heading Row-->
+         <div class="row gx-4 gx-lg-5 align-items-center my-5">
+            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
+                    src="https://images.pexels.com/photos/2284166/pexels-photo-2284166.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""/></div>
+            <div class="col-lg-5">
+                <h1 class="font-weight-light">Cooking Fever</h1>
+                <p>Get your cooking skills on with Cooking Fever, the platform for the most delicious recipes! Choose
+                    between a variety of recipes, such as vegan or protein-conscious, or share your knowlegde with us
+                    and add your own recipes! Enjoy the Cooking Fever infection!</p>
+                <a class="btn btn-primary" href="#!">Call to Action!</a>
+            </div>
+        </div>
+    
+        <!-- Call to Action-->
+        <div class="card text-white bg-secondary my-5 py-4 text-center">
+            <div class="card-body">
+                <p class="text-white m-0">This call to action card is a great place to showcase some important information
+                    or display a clever tagline!</p>
+            </div>
+        </div>
 
-      <!-- Heading Row-->
-      <div class="row gx-4 gx-lg-5 align-items-center my-5">
-          <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
-                  src="{{ url_for ('static', filename='https://dummyimage.com/900x400/dee2e6/6c757d.jpg') }}" alt=""/></div>
-          <div class="col-lg-5">
-              <h1 class="font-weight-light">Business Name or Tagline</h1>
-              <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but
-                  it makes a great use of the standard Bootstrap core components. Feel free to use this template for any
-                  project you want!</p>
-              <a class="btn btn-primary" href="#!">Call to Action!</a>
-          </div>
-      </div>
+    {% block content %}
+    {% endblock %}
 
-      <!-- Call to Action-->
-      <div class="card text-white bg-secondary my-5 py-4 text-center">
-          <div class="card-body">
-              <p class="text-white m-0">This call to action card is a great place to showcase some important information
-                  or display a clever tagline!</p>
-          </div>
-      </div>
-
-      <!-- Content Row-->
-      <div class="row gx-4 gx-lg-5">
-          <div class="col-md-4 mb-5">
-              <div class="card h-100">
-                  <div class="card-body">
-                      <h2 class="card-title">Card One</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex
-                          numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                  </div>
-                  <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-              </div>
-          </div>
-          <div class="col-md-4 mb-5">
-              <div class="card h-100">
-                  <div class="card-body">
-                      <h2 class="card-title">Card Two</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex
-                          natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore
-                          voluptates quos eligendi labore.</p>
-                  </div>
-                  <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-              </div>
-          </div>
-          <div class="col-md-4 mb-5">
-              <div class="card h-100">
-                  <div class="card-body">
-                      <h2 class="card-title">Card Three</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex
-                          numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                  </div>
-                  <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-              </div>
-          </div>
-      </div>
+     
   </div>
 
   <!-- Footer-->
