Added recipes and images to recipes page

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles-own.css') }}" type="text/css">
     <title>Cooking Fever</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
             <div class="col-lg-5">
                 <h1 class="font-weight-light">Cooking Fever</h1>
                 <p>Get your cooking skills on with Cooking Fever, the platform for the most delicious recipes! Choose
-                    between a variety of recipes, such as vegan or protein-conscious, or share your knowlegde with us
+                    between a variety of recipes, such as Asian or Italian meals or vegan and even kid-friendly meals, or share your knowlegde with us
                     and add your own recipes! Enjoy the Cooking Fever infection!</p>
                 <a class="btn btn-primary" href="#!">Call to Action!</a>
             </div>
