--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,4 +1,51 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Recipes Page</h1>
+    <h2>Recipes Page</h2>
+
+    <hr>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Sweet Chilli Shrimp & Cabbage Stir-Fry</h3>
+            <p>
+                Falling into a stir-fry rut with the same veggie + sauce combo each week? We’ve got you covered. This
+                version features garlicky ground pork, which is simmered in a sweet, savory, and spicy blend of soy
+                glaze, ponzu, Thai chili sauce, and rice wine vinegar. It’s tossed with tender sautéed cabbage, then
+                spooned over jasmine rice and garnished with crispy fried onions and fresh cilantro. The best part? It’s
+                ready in just 20 minutes—now that’s what we call a winning dinner.<br>
+
+                Cooking Time: 20 minutes + 5 minutes prep | Cooking Difficulty: Easy<br>
+
+                Allergens:Soy, Wheat, Fish, Shellfish, Milk<br>
+                Produced in a facility that processes milk, eggs, fish, shellfish, tree nuts, peanuts, wheat, and
+                soybean.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://img.hellofresh.com/c_fit,f_auto,fl_lossy,h_1100,q_auto,w_2600/hellofresh_s3/image/61fad303da825628d20377bf-59e80dd6.jpg" alt="">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Teriyaki Chicken Tenders</h3>
+            <p>
+                Soy to the world! The time for a simple chicken stir-fry recipe has come. These tenders are tossed in a
+                thick teriyaki glaze, which coats each piece in a flavorful blend of soy sauce, garlic, ginger, and
+                sesame. Served atop a bed of jasmine rice with green beans to the side, they bring a tour-de-force of
+                Asian-style flavors that both kids and adults will find easy to love.<br>
+                
+                Cooking Time: 35 minutes | Cooking Difficulty: Easy<br>
+
+                Allergens:Soy, Wheat<br>
+                Produced in a facility that processes milk, eggs, fish, shellfish, tree nuts, peanuts, wheat, and
+                soybean.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://img.hellofresh.com/c_fit,f_auto,fl_lossy,h_1100,q_auto,w_2600/hellofresh_s3/image/5a664231ad1d6c6f007d0d72-0c9bca71.jpg" alt="">
+        </div>
+    </div>
 {% endblock %}
