--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,51 @@
 {% extends "base.html" %}
 {% block content %}
 
+    <!-- Call to Action-->
+    <div class="card text-white bg-secondary my-5 py-4 text-center">
+        <div class="card-body">
+            <p class="text-white m-0">Check out our favourite recipes below!</p>
+        </div>
+    </div>
 
     <!-- Content Row-->
     <div class="row gx-4 gx-lg-5">
         <div class="col-md-4 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h2 class="card-title">Card One</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex
-                        numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    <h2 class="card-title">Chicken Tikka Masala</h2>
+                    <p class="card-text">Ready to make restaurant-worthy chicken tikka masala in your own kitchen in
+                        just 25 minutes? It’s as easy as: 1. Brown your chicken with onion and garlic. 2. Simmer in your
+                        creamy sauce laced with aromatic garam masala, warming ginger, and umami-packed tomato paste. 3.
+                        Spoon it all over buttery basmati rice with fresh cilantro and thin slices of chili pepper if
+                        you like a little heat. Oh, and how could we forget 4: dig the heck in!</p>
                 </div>
-                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Get Cooking</a></div>
             </div>
         </div>
         <div class="col-md-4 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h2 class="card-title">Card Two</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex
-                        natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore
-                        voluptates quos eligendi labore.</p>
+                    <h2 class="card-title">Teriyaki Chicken Tenders</h2>
+                    <p class="card-text">Soy to the world! The time for a simple chicken stir-fry recipe has come. These
+                        tenders are tossed in a thick teriyaki glaze, which coats each piece in a flavorful blend of soy
+                        sauce, garlic, ginger, and sesame. Served atop a bed of jasmine rice with green beans to the
+                        side, they bring a tour-de-force of Asian-style flavors that both kids and adults will find easy
+                        to love.</p>
                 </div>
-                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Get Cooking</a></div>
             </div>
         </div>
         <div class="col-md-4 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h2 class="card-title">Card Three</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex
-                        numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    <h2 class="card-title">Perfect Penne Bake</h2>
+                    <p class="card-text">When we say this recipe is perfect, we really mean it. It’s got all the gooey
+                        deliciousness of lasagna with none of the hassle or tedious layering. Featuring tender kale,
+                        meaty chicken sausage, a healthy sprinkle of cheese, and penne cooked until it’s just al dente,
+                        everything about it is a pasta-lover’s fantasy.</p>
                 </div>
-                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Get Cooking</a></div>
             </div>
         </div>
     </div>
