--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -5,13 +5,15 @@
 
     {% for recipe in recipes %}
 
-        <div class="row featurette">
-            <div class="col-md-8">
-                <h3><a href="/recipe/{{ recipe.url }}">{{ recipe.name }}</a></h3>
-                <p>{{ recipe.directions }}</p>
-            </div>
-            <div class="col-md-4">
-                <img src="{{ recipe.img_source }}" alt="" class="featurette-image image-responsive">
+        <div class="container px-4 px-lg-5">
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h3><a href="/recipes/{{ recipe.url }}">{{ recipe.name }}</a></h3>
+                    <p>{{ recipe.description }}</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="{{ recipe.img_source }}" alt="Image for {{ recipe.name }}" class="featurette-image image-responsive">
+                </div>
             </div>
         </div>
 
