Added ingredients, contact form inserted

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -9,7 +9,15 @@
             </div>
             <div class="col-md-7">
                 <h2>{{ recipe.name }}</h2>
-                <p>{{ recipe. directions }}</p>
+                <p>{{ recipe.ingredients }}</p>
+            </div>
+        </div>
+        <div class="row featurette">
+            <div class="col-md-6">
+                <p>{{ recipe.directions }}</p>
+            </div>
+            <div class="col-md-6">
+                <p>nutritional values?</p>
             </div>
         </div>
     </div>
