--- a/templates/base.html
+++ b/templates/base.html
@@ -4,50 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles-own.css') }}" type="text/css">
     <title>Cooking Fever</title>
 </head>
 <body>
 
-  <!-- Responsive navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container px-5">
-          <a class="navbar-brand" href="{{ url_for('index') }}">Cooking Fever</a>
+  <header>
+      <h1 class="site-heading text-center text-faded d-none d-lg-block">
+          <span class="site-heading-lower">Cooking Fever</span>
+      </h1>
+  </header>
+
+    <!-- Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+      <div class="container">
+          <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="{{ url_for('index') }}">Cooking Fever</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{{ url_for('recipes') }}">Recipes</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{{ url_for('contact') }}">Contact</a></li>
+              <ul class="navbar-nav mx-auto">
+                  <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{{ url_for('index') }}">Home</a>
+                  </li>
+                  <li class="nav-item px-lg-4"><a class="nav-link text-uppercase"
+                          href="{{ url_for('recipes') }}">Recipes</a></li>
+                  <li class="nav-item px-lg-4"><a class="nav-link text-uppercase"
+                          href="{{url_for('contact') }}">Contact</a></li>
               </ul>
           </div>
       </div>
-  </nav>
 
-
+    <!-- Main Content -->
     {% block content %}
     {% endblock %}
 
-     
-  </div>
+    <!-- Footer -->
+    <footer class="footer text-faded text-center py-5">
+        <div class="container">
+            <p class="m-0 small">Copyright &copy; Your Website 2022</p>
+        </div>
+    </footer>
 
-  <!-- Footer-->
-  <footer class="py-5 bg-dark">
-      <div class="container px-4 px-lg-5">
-          <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-      </div>
-  </footer>
+    <!-- Bootstrap core JS-->
+    <script
+        src="{{url_for ('static', filename='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js') }}">
+    </script>
 
-  <!-- Bootstrap core JS-->
-  <script
-      src="{{ url_for ('static', filename='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js') }}">
-  </script>
-
-  <!-- Core theme JS-->
-  <script src="{{ url_for ('static', filename='js/scripts.js') }}"></script>
+    <!-- Core theme JS-->
+    <script src="{{url_for ('static', filename='js/scripts.js') }}"></script>
 
 </body>
 </html>
