--- a/templates/index.html
+++ b/templates/index.html
@@ -1,68 +1,40 @@
 {% extends "base.html" %}
 {% block content %}
 
-        <!-- Page Content-->
-        <div class="container px-4 px-lg-5">
-            <!-- Heading Row-->
-            <div class="row gx-4 gx-lg-5 align-items-center my-5">
-            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
-                    src="https://images.pexels.com/photos/2284166/pexels-photo-2284166.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""/></div>
-            <div class="col-lg-5">
-                <h1 class="font-weight-light">Cooking Fever</h1>
-                <p>Get your cooking skills on with Cooking Fever, the platform for the most delicious recipes! Choose
-                    between a variety of recipes, such as Asian or Italian meals or vegan and even kid-friendly meals, or share your knowlegde with us
-                    and add your own recipes! Enjoy the Cooking Fever infection!</p>
-                <a class="btn btn-primary" href="#!">Call to Action!</a>
-            </div>
-        </div>
-
-        <!-- Call to Action-->
-        <div class="card text-white bg-secondary my-5 py-4 text-center">
-            <div class="card-body">
-                <p class="text-white m-0">Check out our favourite recipes below!</p>
-            </div>
-        </div>
-
-        <!-- Content Row-->
-        <div class="row gx-4 gx-lg-5">
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h2 class="card-title">Chicken Tikka Masala</h2>
-                        <p class="card-text">Ready to make restaurant-worthy chicken tikka masala in your own kitchen in
-                            just 25 minutes? It’s as easy as: 1. Brown your chicken with onion and garlic. 2. Simmer in your
-                            creamy sauce laced with aromatic garam masala, warming ginger, and umami-packed tomato paste. 3.
-                            Spoon it all over buttery basmati rice with fresh cilantro and thin slices of chili pepper if
-                            you like a little heat. Oh, and how could we forget 4: dig the heck in!</p>
-                    </div>
-                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Get Cooking</a></div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h2 class="card-title">Teriyaki Chicken Tenders</h2>
-                        <p class="card-text">Soy to the world! The time for a simple chicken stir-fry recipe has come. These
-                            tenders are tossed in a thick teriyaki glaze, which coats each piece in a flavorful blend of soy
-                            sauce, garlic, ginger, and sesame. Served atop a bed of jasmine rice with green beans to the
-                            side, they bring a tour-de-force of Asian-style flavors that both kids and adults will find easy
-                            to love.</p>
-                    </div>
-                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#">Get Cooking</a></div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h2 class="card-title">Perfect Penne Bake</h2>
-                        <p class="card-text">When we say this recipe is perfect, we really mean it. It’s got all the gooey
-                            deliciousness of lasagna with none of the hassle or tedious layering. Featuring tender kale,
-                            meaty chicken sausage, a healthy sprinkle of cheese, and penne cooked until it’s just al dente,
-                            everything about it is a pasta-lover’s fantasy.</p>
-                    </div>
-                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#">Get Cooking</a></div>
+    <section class="page-section clearfix">
+        <div class="container">
+            <div class="intro">
+                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="https://images.pexels.com/photos/1640772/pexels-photo-1640772.jpeg" alt="..." />
+                <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                    <h2 class="section-heading mb-4">
+                        <span class="section-heading-upper">Cooking Fever</span>
+                    </h2>
+                    <p class="mb-3">Get your cooking skills on with Cooking Fever, the platform for the most delicious
+                        recipes! Choose between a variety of recipes, such as Asian or Italian meals or vegan and even
+                        kid-friendly meals, or share your knowlegde with us and add your own recipes! Enjoy the Cooking
+                        Fever infection!</p>
+                    <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Start Cooking!</a></div>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="page-section cta">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-9 mx-auto">
+                    <div class="cta-inner bg-faded text-center rounded">
+                        <h2 class="section-heading mb-4">
+                            <span class="section-heading-upper">Our Promise</span>
+                            <span class="section-heading-lower">To You</span>
+                        </h2>
+                        <p class="mb-0">Checking this website to start your day, we are dedicated to providing you
+                            with friendly service and of course excellent products made with
+                            the highest quality ingredients. If you are not satisfied, please let us know and we will do
+                            whatever we can to make things right!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
