Changed theme, edited colors background and navbar

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>{{ page_title }}</h2>
+    <h2 class="page-title">{{ page_title }}</h2>
 
 
     <!-- Main Content-->
