--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2>{{ page_title }}</h2>
+    <h2 class="page-title">{{ page_title }}</h2>
 
     {% for recipe in recipes %}
 
